--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
                 </div>
             </div>
         </nav>
-        <section class="hero-img"><img src="https://images.unsplash.com/photo-1515378960530-7c0da6231fb1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="A Man with a Laptop"></section>
+        <section class="hero-img"><img src="https://images.unsplash.com/photo-1515378960530-7c0da6231fb1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="A Man with a Laptop">
+        <button class="explore-btn">Explore</button></section>
     </header>
     <main>
         <section class="about-section">
@@ -65,7 +66,7 @@
                 </div>
                 <div>
                     <h3>Commitment</h3>
-                    <ul>
+                    <ul>311151-0
                         <li>5-6 hours a week/1 month</li>
                     </ul>
                 </div>
@@ -73,57 +74,68 @@
         </section>
         <section class = "form-section">
             <h2>Taking in applications for the August cohort!</h2>
+            <p>Fill in the form below and the verification form that you get afterwards.Make sure you read all instructions carefully!</p>
             <form action="#">
-                <div>   
-                    <label for="name">Name</label>
-                    <input type="text" name="name" id="name" required="True">
-                </div>
-                <div>
-                    <label for="email">Email</label>
-                    <input type="email" name="email" id="email" required="True">
-                </div>
-                <div>
-                    <label for="institution">Name Of Your Institution</label>
-                    <input type="text" name="institution" id="institution" required="True">
-                </div>
-                <div>
-                    <label for="degree">Your Qualifications(Degree+Semester)</label>
-                    <input type="text" name="degree" id="degree" required="True">
-                </div>
-                <div>
-                    <label for="linkedin">Link To Your Linkedin</label>
-                    <input type="url" name="linkedin" id="linkedin" required="True">
-                </div>
-                <div>
-                    <label for="addfile">Additional File</label>
-                    <input type="text" name="addfile" id="addfile" required="True">
-                </div>
-                <div>
-                    <p>Which track would you like to pursue</p>
-                    <div>
-                        <input type="radio" name="track" id="webdev" value="webdev" required="True">
-                        <label for="webdev">Web Development</label>
+                <div class="form">
+                    <div>   
+                        <label for="name">Name</label>
+                        <div></div>
+                        <input type="text" name="name" id="name" required="True">
                     </div>
                     <div>
-
-                        <input type="radio" name="track" id="datascience" value="datascience" required="True">
-                        <label for="datascience">Data Science</label>
+                        <label for="email">Email</label>
+                        <div></div>
+                        <input type="email" name="email" id="email" required="True">
                     </div>
                     <div>
-                        <input type="radio" name="track" id="cv" value="cv" required="True">
-                        <label for="cv">Computer Vision</label>
+                        <label for="institution">Name Of Your Institution</label>
+                        <div></div>
+                        <input type="text" name="institution" id="institution" required="True">
                     </div>
                     <div>
-                        <input type="radio" name="track" id="camp-amb" value="camp-amb" required="True">
-                        <label for="camp-amb">Campus Ambassador</label>
+                        <label for="degree">Your Qualifications(Degree+Semester)</label>
+                        <div></div>
+                        <input type="text" name="degree" id="degree" required="True">
                     </div>
                     <div>
-                        <input type="radio" name="track" id="blockchain" value="blockchain" required="True">
-                        <label for="blockchain">Blockchain(requires assesment)</label>
+                        <label for="linkedin">Link To Your Linkedin</label>
+                        <div></div>
+                        <input type="url" name="linkedin" id="linkedin" required="True">
+                    </div>
+                    <div>
+                        <label for="addfile">Additional File</label>
+                        <div></div>
+                        <input type="text" name="addfile" id="addfile" required="True">
+                    </div>
+                    <div>
+                        <p>Which track would you like to pursue</p>
+                        <div class="radio">
+                        <div>
+                            <input type="radio" name="track" id="webdev" value="webdev" required="True">
+                            <label for="webdev">Web Development</label>
+                        </div>
+                        <div>
+                            
+                            <input type="radio" name="track" id="datascience" value="datascience" required="True">
+                            <label for="datascience">Data Science</label>
+                        </div>
+                        <div>
+                            <input type="radio" name="track" id="cv" value="cv" required="True">
+                            <label for="cv">Computer Vision</label>
+                        </div>
+                        <div>
+                            <input type="radio" name="track" id="camp-amb" value="camp-amb" required="True">
+                            <label for="camp-amb">Campus Ambassador</label>
+                        </div>
+                        <div>
+                            <input type="radio" name="track" id="blockchain" value="blockchain" required="True">
+                            <label for="blockchain">Blockchain(requires assesment)</label>
+                        </div>
+                        </div>
                     </div>
                 </div>
                 <button type="submit">Submit</button>
-                </form>
+            </form>
         </section>
         <section class = "quote-section">
             <div>
