--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             </div>
         </nav>
         <section class="hero-img"><img src="https://images.unsplash.com/photo-1515378960530-7c0da6231fb1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="A Man with a Laptop">
-        <button class="explore-btn">Explore</button></section>
+        <button class="explore-btn"><a href="#about">Explore</a></button></section>
     </header>
     <main>
-        <section class="about-section">
+        <section id="about" class="about-section">
             <div class="about-text">
                 <h2>Skill Brewery: Free Internship Program</h2>
                 <p>Work on cool hands-on projects to amplify your profile. Gain an internship certificate, work experience and mentoring after the completion of the programme.</p>
@@ -66,7 +66,7 @@
                 </div>
                 <div>
                     <h3>Commitment</h3>
-                    <ul>311151-0
+                    <ul>
                         <li>5-6 hours a week/1 month</li>
                     </ul>
                 </div>
@@ -110,27 +110,27 @@
                     <div>
                         <p>Which track would you like to pursue</p>
                         <div class="radio">
-                        <div>
-                            <input type="radio" name="track" id="webdev" value="webdev" required="True">
-                            <label for="webdev">Web Development</label>
-                        </div>
-                        <div>
-                            
-                            <input type="radio" name="track" id="datascience" value="datascience" required="True">
-                            <label for="datascience">Data Science</label>
-                        </div>
-                        <div>
-                            <input type="radio" name="track" id="cv" value="cv" required="True">
-                            <label for="cv">Computer Vision</label>
-                        </div>
-                        <div>
-                            <input type="radio" name="track" id="camp-amb" value="camp-amb" required="True">
-                            <label for="camp-amb">Campus Ambassador</label>
-                        </div>
-                        <div>
-                            <input type="radio" name="track" id="blockchain" value="blockchain" required="True">
-                            <label for="blockchain">Blockchain(requires assesment)</label>
-                        </div>
+                            <div>
+                                <input type="radio" name="track" id="webdev" value="webdev" required="True">
+                                <label for="webdev">Web Development</label>
+                            </div>
+                            <div>
+                                
+                                <input type="radio" name="track" id="datascience" value="datascience" required="True">
+                                <label for="datascience">Data Science</label>
+                            </div>
+                            <div>
+                                <input type="radio" name="track" id="cv" value="cv" required="True">
+                                <label for="cv">Computer Vision</label>
+                            </div>
+                            <div>
+                                <input type="radio" name="track" id="camp-amb" value="camp-amb" required="True">
+                                <label for="camp-amb">Campus Ambassador</label>
+                            </div>
+                            <div>
+                                <input type="radio" name="track" id="blockchain" value="blockchain" required="True">
+                                <label for="blockchain">Blockchain(requires assesment)</label>
+                            </div>
                         </div>
                     </div>
                 </div>
