Scrollbar and Buttons added

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
         </nav>
         <section class="hero-img"><img src="https://images.unsplash.com/photo-1515378960530-7c0da6231fb1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="A Man with a Laptop">
-        <button class="explore-btn"><a href="#about">Explore</a></button></section>
+        <a class="explore-btn" href="#about">Explore</a></section>
     </header>
     <main>
         <section id="about" class="about-section">
